--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@iarna/toml": "^2.2.5",
     "conventional-changelog": "^3.1.25",
     "conventional-recommended-bump": "^6.1.0",
+    "fast-xml-parser": "^4.1.3",
     "git-semver-tags": "4.1.1",
     "object-path": "^0.11.8",
     "semver": "^7.3.7",
