--- a/.github/workflows/pom.yml
+++ b/.github/workflows/pom.yml
@@ -28,6 +28,7 @@ jobs:
         with:
           github-token: ${{ secrets.github_token }}
           version-file: "pom.xml"
+          version-path: "project.version"
 
       - name: Show file
         run: |
