--- a/.github/workflows/pom.yml
+++ b/.github/workflows/pom.yml
@@ -39,3 +39,4 @@ jobs:
         env:
           FILES: "pom.xml"
           EXPECTED_VERSION: "1.5.0"
+          EXPECTED_VERSION_PATH: "project.version"
